# nexus-os

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PROJECT-BRIEFING.md  README.md  SECURITY.md  ideas.md  package.json  pnpm-lock.yaml  seed-showcase.mjs  todo.md  toolbar-fix-notes.txt  verification-notes.txt
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: release.yml
client/: index.html
client/public/: robots.txt
client/src/: App.tsx  index.css
drizzle/: 0001_shocking_morlun.sql  0002_whole_jimmy_woo.sql  0003_tense_mentallo.sql  0004_panoramic_wolverine.sql  schema.ts
drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  0002_snapshot.json  0003_snapshot.json  0004_snapshot.json  _journal.json
server/: blog.test.ts  blogDb.ts  blogFeedRoutes.ts  blogRouter.ts  blogSsrMiddleware.ts  blogUploadRoute.ts  routers.ts  scheduledJobs.ts  seed-blog-v2.mjs  seed-blog.mjs  seed-categories.mjs  showcase.test.ts  showcaseDb.ts  showcaseRouter.ts  showcaseUploadRoute.ts  update-covers.mjs
server/_core/: index.ts  vite.ts
src/: error.rs  lib.rs  main.rs
src/agent/: mod.rs
src/audit/: mod.rs
src/broker/: mod.rs
src/cli/: agent_run.rs  agent_stop.rs  audit.rs  axis.rs  broker.rs  cost.rs  create.rs  dashboard.rs  delete.rs  edge.rs  init.rs  marketplace.rs  mod.rs  pool.rs  saga.rs  status.rs  supervisor.rs  workflow.rs
src/config/: mod.rs  types.rs
src/cost/: mod.rs
src/dashboard/: mod.rs
src/db/: mod.rs
src/edge/: mod.rs
src/marketplace/: mod.rs
src/pool/: mod.rs
src/saga/: mod.rs
src/supervisor/: mod.rs
src/trust/: mod.rs
src/wasm/: mod.rs
src/workflow/: mod.rs
(+43 files in other folders)
