[package]
name = "naos"
version = "0.2.0"
edition = "2021"
authors = ["Leonidas Esquire <leonidas@aiagents.nexus>"]
description = "The orchestration layer for AI agents — supervisors, sagas, cost control, WASM sandboxing, and more."
license = "Apache-2.0"
repository = "https://github.com/leonidas-esquire/nexus-os"
homepage = "https://aiagents.nexus"
readme = "README.md"
keywords = ["ai", "agents", "orchestration", "wasm", "supervisor"]
categories = ["command-line-utilities", "web-programming"]

[[bin]]
name = "naos"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Web framework (dashboard)
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# WASM runtime
wasmtime = "19"

# Logging & tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Utilities
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
anyhow = "1"
colored = "2"
tabled = "0.15"
sha2 = "0.10"
hex = "0.4"
dirs = "5"
open = "5"
ctrlc = "3"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "z"
